# minnie

./: .gitignore  Cargo.toml  LICENSE-MIT
examples/: test_gateway.rs
examples/common/: mod.rs
minnie/: Cargo.toml
minnie/examples/: test_gateway.rs
minnie/examples/common/: mod.rs
minnie/src/: context.rs  errors.rs  lib.rs  utils.rs  ws.rs
minnie/src/api/: channel.rs  guild.rs  mod.rs
minnie/src/gateway/: mod.rs  model.rs  shard.rs
minnie/src/http/: limits.rs  mod.rs  model.rs
minnie/src/model/: event.rs  guild.rs  mod.rs
minnie_errors/: Cargo.toml
minnie_errors/src/: lib.rs  status.rs
minnie_model/: Cargo.toml
minnie_model/src/: channel.rs  event.rs  gateway.rs  guild.rs  http.rs  lib.rs  message.rs  serde.rs  types.rs  user.rs
src/: context.rs  errors.rs  gateway.rs  lib.rs  serde.rs  shard.rs  ws.rs
src/api/: channel.rs  guild.rs  mod.rs
src/gateway/: mod.rs  model.rs  shard.rs
src/http/: limits.rs  mod.rs  model.rs  status.rs
src/model/: channel.rs  event.rs  gateway.rs  guild.rs  message.rs  mod.rs  types.rs  user.rs  utils.rs
