[package]
name = "minnie"
version = "0.1.0"
authors = ["Lymia Aluysia <lymia@lymiahugs.com>"]
edition = "2018"

[profile.release]
opt-level = 3
lto = true

[features]
nightly = []

[dependencies]
base64 = "0.11.0"
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.3"
derivative = "1.0.2"
derive_setters = "0.1.0"
enumset = { version = "0.4.0", features = ["serde"] }
failure = "0.1.5"
fnv = "1.0.3"
futures01 = { package = "futures", version = "0.1.21" }
futures-preview = { version = "=0.3.0-alpha.19", features = ["compat", "io-compat", "async-await"] }
flate2 = { version = "1.0.7", default-features = false, features = ["rust_backend"] }
lazy_static = "1.4.0"
log = "0.4.6"
parking_lot = "0.9.0"
rand = "0.7.2"
reqwest = { version = "0.9.15", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.90", features = ["rc"] }
serde_derive = "1.0.90"
serde_json = "1.0.39"
serde_repr = "0.1.4"
serde_with = "1.3.1"
strum = "0.16.0"
strum_macros = "0.16.0"
tokio = "0.1.18"
tokio-rustls = "0.10"
url = "1.7.2"
webpki = "0.21"
webpki-roots = "0.18"
websocket = { version = "0.23.0", default-features = false, features = ["async"] }

[dev-dependencies]
env_logger = "0.7.1"
