[package]
name = "minnie"
version = "0.1.0"
authors = ["Lymia Aluysia <lymia@lymiahugs.com>"]
edition = "2018"

[profile.release]
opt-level = 3
lto = true

[features]
nightly = []

[dependencies]
base64 = "0.11.0" # TODO: Currently unused.
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.4"
derivative = "1.0.2"
derive_setters = "0.1.0"
enumset = { version = "0.4.0", features = ["serde"] }
failure = "0.1.5"
fnv = "1.0.3"
lazy_static = "1.4.0"
mime_guess = "2.0.1"
parking_lot = "0.10.0"
rand = "0.7.2"
tracing = { version = "0.1.10", features = ["log"] }
tracing-futures = "0.2.0"

# Serialization
serde = { version = "1.0.90", features = ["rc", "derive", "unstable"] }
serde_json = "1.0.39"
serde_repr = "0.1.4"
serde_with = "1.3.1"
strum = "0.16.0"
strum_macros = "0.16.0"

# Async & web
futures = { version = "0.3.0", features = ["compat", "io-compat", "async-await"] }
reqwest = { version = "0.9.15", default-features = false, features = ["rustls-tls"] }
tokio = "0.1.18"
url = "1.7.2"

# Websocket
flate2 = { version = "1.0.7", default-features = false, features = ["rust_backend"] }
tokio-rustls = "0.10"
webpki = "0.21"
webpki-roots = "0.18"
websocket = { version = "0.24.0", default-features = false, features = ["async"] }

[dev-dependencies]
log = "0.4.8"
tracing-log = "0.1.1"
tracing-subscriber = "0.1.6"