[package]
name = "minnie"
version = "0.1.0"
authors = ["Lymia Aluysia <lymia@lymiahugs.com>"]
edition = "2018"

[profile.release]
opt-level = 3
lto = true

[features]
nightly = []

[dependencies]
base64 = "0.12.0"
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.4"
derivative = "2.0.2"
derive_setters = "0.1.0"
enumset = { version = "0.4.0", features = ["serde"] }
failure = "0.1.5"
fnv = "1.0.3"
lazy_static = "1.4.0"
mime_guess = "2.0.1"
parking_lot = "0.10.0"
rand = "0.7.2"
tracing = { version = "0.1.10", features = ["log"] }
tracing-futures = "0.2.0"

# Serialization
serde = { version = "1.0.90", features = ["rc", "derive", "unstable"] }
serde_json = "1.0.39"
serde_repr = "0.1.4"
serde_with = "1.3.1"
strum = "0.18.0"
strum_macros = "0.18.0"

# Async & web
futures = "0.3.0"
reqwest = { version = "0.10.4", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "0.2.13", default-features = false, features = ["time", "net"] }
url = "2.1.1"

# Websocket
flate2 = { version = "1.0.7", default-features = false, features = ["rust_backend"] }
http = "0.2.0"
tokio-rustls = "0.13"
tokio-tungstenite = "0.10.1"
webpki = "0.21"
webpki-roots = "0.19"

[dev-dependencies]
log = "0.4.8"
tracing-log = "0.1.1"
tracing-subscriber = "0.2.3"