[package]
name = "minnie"
version = "0.1.0"
authors = ["Alissa Rao <lymia@lymiahugs.com>"]
edition = "2018"

description = "An asynchronous Discord library for Rust."
keywords = ["discord"]
categories = ["api-bindings"]

documentation = "https://docs.rs/minnie/"
repository = "https://github.com/SylphieBot/minnie"
readme = "../README.md"
include = ["../LICENSE-MIT", "../LICENSE-APACHE"]

license = "MIT/Apache-2.0"

[features]
nightly = []

[dependencies]
minnie_errors = { version = "0.1.0", path = "../minnie_errors" }
minnie_model = { version = "0.1.0", path = "../minnie_model" }

crossbeam-channel = "0.4"
derivative = "2.0.2"
derive_setters = "0.1.0"
enumset = { version = "1.0.0", features = ["serde"] }
fxhash = "0.2.1"
parking_lot = "0.10.0"
rand = "0.7.2"
tracing = { version = "0.1.10", features = ["log"] }
tracing-futures = "0.2.0"

# Serialization
serde = { version = "1.0.90", features = ["rc", "derive", "unstable"] }
serde_json = "1.0.39"

# Async & web
futures = "0.3.0"
reqwest = { version = "0.10.4", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "0.2.13", default-features = false, features = ["time", "net"] }
url = "2.1.1"

# Websocket
flate2 = { version = "1.0.7", default-features = false, features = ["rust_backend"] }
http = "0.2.0"
tokio-rustls = "0.13"
tokio-tungstenite = "0.10.1"
webpki = "0.21"
webpki-roots = "0.19"

[dev-dependencies]
log = "0.4.8"
tracing-log = "0.1.1"
tracing-subscriber = "0.2.3"
