[package]
name = "minnie_model"
version = "0.1.0"
authors = ["Alissa Rao <lymia@lymiahugs.com>"]
edition = "2018"

description = "Defines definitions for the JSON type used by Discord. This is reexposed in `minnie`."

documentation = "https://docs.rs/minnie_model/"
repository = "https://github.com/SylphieBot/minnie"
include = ["../LICENSE-MIT", "../LICENSE-APACHE"]

license = "MIT/Apache-2.0"

[dependencies]
minnie_errors = { version = "0.1.0", path = "../minnie_errors" }

base64 = "0.13.0"
chrono = { version = "0.4.11", features = ["serde"] }
derive_setters = "0.1.0"
enumset = { version = "1.0.0", features = ["serde"] }
fxhash = "0.2.1"
http = "0.2.0"
lazy_static = "1.4.0"
mime_guess = "2.0.1"

# Serialization
serde = { version = "1.0.90", features = ["rc", "derive", "unstable"] }
serde_json = "1.0.39"
serde_repr = "0.1.4"
serde_with = "1.3.1"
strum = "0.19.0"
strum_macros = "0.19.0"
